add dist directory for netlify

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,8 @@
 
         {{ with .Site.Params.profilePic }} <img class="profile" src="{{ . }}"> {{ end }}
 
+        <div class="avatar"><img src="images/me.jpeg" alt="avatar"></div>
+
         <h1>{{ .Site.Title }}</h1>
 
         <h2>{{ markdownify .Site.Params.Description }}</h2>
